--- a/src/components/Tabela.css
+++ b/src/components/Tabela.css
@@ -21,6 +21,21 @@ tbody {
 
 .img {
     width: 55px;
+    height: 55px;
     border-radius: 50%;
     border: 2px solid black;
+    margin-right: 15px
+}
+
+.posicao {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+
+}
+
+.numero {
+    padding: 10px;
+    font-size: 20px;
 }
