--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@ header {
     font-weight: bold;
     letter-spacing: -0.04em;
     line-height: 1.75em;
-    margin-bottom: 10px;
+    margin: 10px;
     text-transform: uppercase;
 
 }
